--- a/api/package.json
+++ b/api/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://gitlab.com/TongyunHuang/fa21-cs498rk-project#readme",
   "dependencies": {
-    "express": "^4.17.1",
     "body-parser": "^1.17.2",
+    "connect-mongo": "^3.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongoose": "^5.4.18",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0"
   }
 }
