--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://gitlab.com/TongyunHuang/fa21-cs498rk-project#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.6",
