--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@tinymce/tinymce-react": "^3.13.0",
     "axios": "^0.24.0",
+    "date-fns": "^2.27.0",
     "draft-js": "^0.11.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
