--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui-treasury/styles": "^1.13.1",
     "@mui/icons-material": "^5.2.0",
     "@mui/lab": "^5.0.0-alpha.59",
     "@mui/material": "^5.2.2",
